correcting frontend alignment

--- a/frontend/src/components/Home/home.css
+++ b/frontend/src/components/Home/home.css
@@ -139,7 +139,17 @@ a {
     text-decoration: none;
     color: #F1C863;
 }
-
+p
+  {
+    text-align: left;
+  }
+h6
+  {
+    font-weight: bold;
+    text-decoration: none;
+    color: #F7EDE1;
+    font-size: 1em;
+  }
 @media only screen and (max-width: 500px) {
     .masthead {
         padding: 3em 0;
@@ -149,5 +159,7 @@ a {
     }
     .content-footer {
         padding: 2em 2.5em;
-  }
+
+    }
+
 }
